# Toy3MLplugin

./: .gitignore  README.md  pyproject.toml
Toy3MLplugin/: __init__.py  background.py  base.py  catalog.py  cosipy_dataif.py  instrument.py  observation.py  simulate.py  tsmap.py
Toy3MLplugin/toy/: __init__.py  scanner.py
examples/: 01_plugin_and_fitting.ipynb  02_multi_dataset.ipynb  03_ts_map.ipynb  04_cosipy_deconvolution.ipynb  05_mcmc_posterior.ipynb  imagedeconvolution_toy.yml  sources.yaml
tests/: conftest.py  test_closure.py  test_cosipy_dataif.py  test_poisson.py  test_response.py  test_tsmap.py
